# service_discovery_prototype

./: readme.md
protos/: discovery.proto  heartbeat.proto  metadata.proto
sigmund/: Cargo.toml  build.rs
sigmund-client/: Cargo.toml  build.rs
sigmund-client/examples/: client.rs
sigmund-client/src/: discovery_client.rs  heartbeat_core.rs  lib.rs
sigmund/src/: discovery_service.rs  main.rs  meta_service.rs
